--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a4fc66">  <td>17/09/07 16:08:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Tracko.afterClass()[pri:0, instance:Maven_demo.Maven_demo1.Tracko@61832929]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>17/09/07 16:07:00</td>   <td>-100891</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tracko.beforeClass()[pri:0, instance:Maven_demo.Maven_demo1.Tracko@61832929]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="a4fc66">  <td>17/09/07 16:07:27</td>   <td>-73206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tracko.f()[pri:1, instance:Maven_demo.Maven_demo1.Tracko@61832929]">f</td> 
-  <td>main@1061804750</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>17/12/02 00:43:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Tracko.afterClass()[pri:0, instance:Maven_demo.Maven_demo1.Tracko@59fa1d9b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@117244645</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>17/12/02 00:41:33</td>   <td>-129863</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Tracko.beforeClass()[pri:0, instance:Maven_demo.Maven_demo1.Tracko@59fa1d9b]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@117244645</td>   <td></td> </tr>
+<tr bgcolor="90c9c3">  <td>17/12/02 00:42:09</td>   <td>-94231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Tracko.f()[pri:1, instance:Maven_demo.Maven_demo1.Tracko@59fa1d9b]">f</td> 
+  <td>main@117244645</td>   <td></td> </tr>
 </table>
